# blue

./: Cargo.toml
src/: config.rs  lib.rs  main.rs  static.rs  values.rs
src/api/: mod.rs
src/api/blue/: mod.rs
src/api/blue/v1/: diritems.rs  load.rs  mod.rs  presets.rs  render.rs  users.rs
src/api/generic/: mod.rs
src/api/generic/v1/: create.rs  mod.rs  pfp.rs
src/components/: fs.rs  mod.rs  topbar.rs
src/functions/: from_res.rs  internalserver_error.rs  mod.rs
src/pages/: fs.rs  home.rs  mod.rs  render.rs
src/structs/: config.rs  mod.rs
src/structs/tasks/: render.rs
static/css/: preview.css  render.css  topbar-loggedin.css
static/css/dark/: fs.css  login.css  main.css  path.css  render.css  topbar.css
static/html/: been-loggedout.html  finish-setup.html  fs.html  login-ask-logout.html  login.html  mapview.html  notfound.html  register.html  remindverify.html  render.html
static/scripts/: file.js  fs.js  login.js  render.js  topbar.js
