[package]
name = "gm-blue"
version = "0.1.0"
edition = "2021"

[dependencies]
goodmorning-services = { git = "https://github.com/gmornin/services", rev = "855f0e7", features = ["blue", "tex"] }
actix-web = "4.9"
tokio = { version = "1.41", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde-inline-default = "0.2"
default-from-serde = "0.1"
mongodb = "3.1"
tokio-stream = "0.1"
